--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.23.0",
     "@clerk/themes": "^2.2.51",
     "@neondatabase/serverless": "^1.0.1",
+    "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
     "next": "15.3.4",
     "react": "^19.0.0",
